--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,5 +15,6 @@ env_logger = {version = "0.11.7", features = ["color", "humantime"]}
 
 ipnetwork = {version = "0.21.1", features=["serde"]}
 log = "0.4.26"
+pnet = {version = "0.35.0", features=["serde"]}
 serde = {version = "1.0.219", features=["derive"]}
 serde_json = "1.0.140"
